[analytics]: added google analytics;

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://neurobangla.github.io/ocr-landing/">
     <title>NeuroBangla Landing | Redirecting...</title>
+
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH0Z8X9X3J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YH0Z8X9X3J');
+  </script>
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://neurobangla.github.io/ocr-landing/">OCR Landing</a>.</p>
