--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://neurobangla.github.io/ocr-landing/">
-    <title>NeuroBangla Landing | Redirecting...</title>
-
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH0Z8X9X3J"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-YH0Z8X9X3J');
-  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Demo</title>
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://neurobangla.github.io/ocr-landing/">OCR Landing</a>.</p>
+
+<div id="root"></div>
+
+<script src="common.js"></script>
+<script src="index.js"></script>
+
 </body>
 </html>
