--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Demo</title>
   <link rel="stylesheet" href="index.css" />
+
+    <title>NeuroBangla Landing | Redirecting...</title>
+
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH0Z8X9X3J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YH0Z8X9X3J');
+  </script>
 </head>
 <body>
 
