[seo]: meta description; meta keywords; schema.org structured data;

--- a/index.html
+++ b/index.html
@@ -5,21 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="index.css" />
 
-    <title>NeuroBangla Landing | Redirecting...</title>
+  <title>NeuroBangla | AI Tools for Bengali NLP, Language Processing & More</title>
 
-    <!-- Google tag (gtag.js) -->
+  <meta name="description" content="Explore NeuroBangla – AI tools and deep learning models tailored for Bengali NLP, speech-to-text, and semantic understanding.">
+  <meta name="keywords" content="Bengali NLP, AI Bengali, speech-to-text Bengali, deep learning Bangla, NeuroBangla AI, language models Bengali, NLP tools Bangla">
+
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "NeuroBangla",
+    "operatingSystem": "All",
+    "applicationCategory": "Artificial Intelligence",
+    "description": "NeuroBangla is a suite of AI-powered tools focused on Bengali NLP, including text analysis, translation, and speech processing.",
+    "url": "https://yourdomain.com"
+  }
+  </script>
+
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH0Z8X9X3J"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-YH0Z8X9X3J');
   </script>
 </head>
 <body>
 
 <div id="root"></div>
+
+<noscript>
+  <h1>NeuroBangla – AI for Bengali NLP and Deep Learning</h1>
+  <p>NeuroBangla offers cutting-edge artificial intelligence tools for Bengali language processing, speech recognition, and NLP research. Please enable JavaScript to experience the full application.</p>
+</noscript>
 
 <script src="common.js"></script>
 <script src="index.js"></script>
