[seo,fix]: fixed schema.org url;

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     "operatingSystem": "All",
     "applicationCategory": "Artificial Intelligence",
     "description": "NeuroBangla is a suite of AI-powered tools focused on Bengali NLP, including text analysis, translation, and speech processing.",
-    "url": "https://yourdomain.com"
+    "url": "http://neurobangla.com/"
   }
   </script>
 
